k8s/backend-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: backend
  name: backend-clusterip
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: backend
  type: ClusterIP
status:
  loadBalancer: {}
